# research-to-prod-ml-platform

./: .gitignore  README.md  pyproject.toml
apps/api/: main.py
docs/: architecture.md
examples/resnet18_classifier/: expected_output.json  model_config.yaml  preprocessing.yaml
ml_platform/validation/: package_validator.py  runtime_validator.py
research_to_prod_ml_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: create_example_model.py  validate_package.py
