[project]
name = "research-to-prod-ml-platform"
version = "0.1.0"
description = "Local-first MLOps platform for PyTorch model validation and deployment."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["apps*", "ml_platform*"]
exclude = ["infra*", "tests*", "examples*", "scripts*"]
